fix: amount color on disabled state fixed

--- a/src/components/lyne-tab-amount/styles/lyne-tab-amount.component.scss
+++ b/src/components/lyne-tab-amount/styles/lyne-tab-amount.component.scss
@@ -6,5 +6,5 @@
 :host {
   padding-left: 4px;
   font-family: var(--typo-type-face-sbb-roman);
-  color: var(--color-metal-default);
+  color: var(--lyne-amount-color, var(--color-metal-default));
 }
