refactor: lyne-tab-group and lyne-tab-amount refactor

--- a/src/components/lyne-tab-amount/styles/lyne-tab-amount.component.scss
+++ b/src/components/lyne-tab-amount/styles/lyne-tab-amount.component.scss
@@ -4,7 +4,9 @@
 @include host-component-properties;
 
 :host {
+  display: inline-block;
+  vertical-align: middle;
   padding-left: 4px;
   font-family: var(--typo-type-face-sbb-roman);
-  color: var(--lyne-amount-color, var(--color-metal-default));
+  color: var(--lyne-amount-color-override, var(--color-metal-default));
 }
