--- a/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
+++ b/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
@@ -18,19 +18,17 @@
   ::slotted(h4),
   ::slotted(h5),
   ::slotted(h6) {
+    @include title;
+    line-height: var(--typo-line-height-body-text);
+    font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
     display: inline-block;
     vertical-align: middle;
     padding: calc(var(--spacing-fixed-2x) / var(--typo-scale-default) * 1rem) calc(var(--spacing-fixed-5x) / var(--typo-scale-default) * 1rem);
-    margin: 0;
-    color: var(--color-black-default);
     border: calc(var(--border-width-1x) / var(--typo-scale-default) * 1rem) solid var(--color-cloud-default);
+    border-radius: calc(var(--spacing-fixed-5x) / var(--typo-scale-default) * 1rem);
+    color: var(--color-black-default);
     background-color: transparent;
     -webkit-tap-highlight-color: transparent;
-    border-radius: calc(var(--spacing-fixed-5x) / var(--typo-scale-default) * 1rem);
-    line-height: var(--typo-line-height-body-text);
-    font-family: var(--typo-type-face-sbb-bold);
-    font-weight: 700;
-    font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -109,11 +107,10 @@
 }
 
 .tab-content {
-  margin-top: calc(var(--spacing-responsive-m-small) / var(--typo-scale-default) * 1rem);
-  font-family: var(--typo-type-face-sbb-roman);
-  font-weight: 400;
+  @include text;
   font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
-  line-height: var(--typo-line-height-body-text);
+  margin-top: calc(var(--spacing-responsive-m-small) / var(--typo-scale-default) * 1rem);
+  color: var(--color-iron-default);
   ::slotted(div) {
     opacity: 0;
     visibility: hidden;
